RESOLVED FIXED113846
[Mac] REGRESSION: Autocorrection doesn't work in DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=113846
Summary [Mac] REGRESSION: Autocorrection doesn't work in DumpRenderTree
Ryosuke Niwa
Reported 2013-04-02 22:30:48 PDT
It seems like autocorrection has stopped working in DumpRenderTree recently. All tests consistently fail. Somehow WebEditorClient::checkTextOfParagraph is returning different results inside DumpRenderTree; NSTextCheckingTypeSpelling instead of NSTextCheckingTypeCorrection.
Attachments
Fixes DRT and improves tests (613.70 KB, patch)
2013-04-08 20:46 PDT, Ryosuke Niwa
ap: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 (1.56 MB, application/zip)
2013-04-09 00:27 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2013-04-02 22:31:26 PDT
Ryosuke Niwa
Comment 2 2013-04-02 22:32:14 PDT
This bug blocks other bugs for autocorrection as we cannot test the feature.
Ryosuke Niwa
Comment 3 2013-04-08 20:46:04 PDT
Created attachment 196988 [details] Fixes DRT and improves tests
Alexey Proskuryakov
Comment 4 2013-04-08 22:47:59 PDT
Comment on attachment 196988 [details] Fixes DRT and improves tests View in context: https://bugs.webkit.org/attachment.cgi?id=196988&action=review r=me since the change looks correct, however: > NSTextCheckingTypeSpelling instead of NSTextCheckingTypeCorrection How does this patch fix what's in bug description? > LayoutTests/ChangeLog:8 > + Remoevd failing expectations from tests that require "mesage" to be corrected to "message". Typo: "Remoeved". > LayoutTests/ChangeLog:10 > + without pixel results (we still dump pixel results to sanity check). Is this what dumpAsText(true) does? In such case, we need a more descriptive way to express this desire.
Ryosuke Niwa
Comment 5 2013-04-08 23:12:49 PDT
(In reply to comment #4) > (From update of attachment 196988 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=196988&action=review > > r=me since the change looks correct, however: > > > NSTextCheckingTypeSpelling instead of NSTextCheckingTypeCorrection > > How does this patch fix what's in bug description? The problem was that we weren't initializing the NSSpellChecker properly in DumpRenderTree. I'll clarify in the change log. > > LayoutTests/ChangeLog:8 > > + Remoevd failing expectations from tests that require "mesage" to be corrected to "message". > > Typo: "Remoeved". Oops, will fix. > > LayoutTests/ChangeLog:10 > > + without pixel results (we still dump pixel results to sanity check). > > Is this what dumpAsText(true) does? In such case, we need a more descriptive way to express this desire. Yeah, we need to change the interface :( I've been saying this since 2010. Maybe it's a good hackathon idea for the contributor's meeting ;)
Build Bot
Comment 6 2013-04-09 00:27:26 PDT
Comment on attachment 196988 [details] Fixes DRT and improves tests Attachment 196988 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17634058 New failing tests: platform/mac/editing/spelling/click-autocorrected-word.html platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word.html platform/mac/editing/spelling/move-cursor-to-autocorrected-word.html platform/mac/editing/spelling/delete-into-autocorrected-word.html platform/mac/editing/spelling/forward-delete-into-autocorrected-word.html
Build Bot
Comment 7 2013-04-09 00:27:28 PDT
Created attachment 197009 [details] Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Ryosuke Niwa
Comment 8 2013-04-09 00:33:58 PDT
Alexey Proskuryakov
Comment 9 2013-08-28 14:03:19 PDT
This patch changed DumpRenderTree, but not WebKitTestRunner. Ryosuke, would you be willing to take care of that?
Ryosuke Niwa
Comment 10 2013-08-28 14:17:06 PDT
(In reply to comment #9) > This patch changed DumpRenderTree, but not WebKitTestRunner. Ryosuke, would you be willing to take care of that? I think that should be tracked in a separate bug. This bug was specifically for DumpRenderTree. Something has massively regressed in WebKitTestRunner with respect to the spellchecking test infrastructure.
Note You need to log in before you can comment on or make changes to this bug.