REGRESSION: Autocorrection doesn't work in DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=113846

Reviewed by Alexey Proskuryakov.

Tools:

The problem was that we were replacing NSSpellCheck's dictionary with our own
in DumpRenderTree but we were not adding necessary corrections to the dictionary.

Fixed the bug by having NSSpellChecker correct "mesage" and "wouldn" to "message"
and "would" respectively in DumpRenderTree.

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetDefaultsToConsistentValues):

LayoutTests:

Removed failing expectations from tests that require "mesage" to be corrected to "message".

Also modified to dynamically assert the marker positions so that we may catch regressions
without pixel results (we still dump pixel results via dumpAsText(true) for sanity check).

* platform/mac/TestExpectations:
* platform/mac/editing/spelling/autocorrection-contraction-expected.png:
* platform/mac/editing/spelling/autocorrection-contraction-expected.txt:
* platform/mac/editing/spelling/click-autocorrected-word-expected.png:
* platform/mac/editing/spelling/click-autocorrected-word-expected.txt:
* platform/mac/editing/spelling/click-autocorrected-word.html:
* platform/mac/editing/spelling/delete-into-autocorrected-word-expected.png:
* platform/mac/editing/spelling/delete-into-autocorrected-word-expected.txt:
* platform/mac/editing/spelling/delete-into-autocorrected-word.html:
* platform/mac/editing/spelling/forward-delete-into-autocorrected-word-expected.png:
* platform/mac/editing/spelling/forward-delete-into-autocorrected-word-expected.txt:
* platform/mac/editing/spelling/forward-delete-into-autocorrected-word.html:
* platform/mac/editing/spelling/move-cursor-to-autocorrected-word-expected.png:
* platform/mac/editing/spelling/move-cursor-to-autocorrected-word-expected.txt:
* platform/mac/editing/spelling/move-cursor-to-autocorrected-word.html:
* platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word-expected.png:
* platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word-expected.txt:
* platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word.html:
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/132619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147994 268f45cc-cd09-0410-ab3c-d52691b4dbfc