Tools/DumpRenderTree/mac/DumpRenderTree.mm
@@ -596,7 +596,11 @@ static void resetDefaultsToConsistentValues()
     [defaults setBool:YES forKey:@"UseWebKitWebInspector"];
 
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1070
-    [defaults setObject:[NSDictionary dictionaryWithObjectsAndKeys:@"notational", @"notationl", nil] forKey:@"NSTestCorrectionDictionary"];
+    [defaults setObject:[NSDictionary dictionaryWithObjectsAndKeys:
+        @"notational", @"notationl",
+        @"message", @"mesage",
+        @"would", @"wouldn",
+        nil] forKey:@"NSTestCorrectionDictionary"];
 #endif
 
     // Scrollbars are drawn either using AppKit (which uses NSUserDefaults) or using HIToolbox (which uses CFPreferences / kCFPreferencesAnyApplication / kCFPreferencesCurrentUser / kCFPreferencesAnyHost)
